--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/static/style.css">
   </head>
   <body>
-     <h1>Hello, {{ name }}!</h1>
+     <h1>Hola, {{ name }}!</h1>
     <p>You are {{ time }} years old.</p>
     <div id="top" class="page" role="document">
       <header role="banner">
