--- a/templates/tickers.html
+++ b/templates/tickers.html
@@ -24,6 +24,7 @@
             <tr>
                 <td>{{ ticker.id }}</td>
                 <td>{{ ticker.name }}</td>
+                <td>{{ ticker.created_at }}</td>
             </tr>
             {% endfor %}
         </tbody>
