--- a/templates/tickers.html
+++ b/templates/tickers.html
@@ -10,8 +10,6 @@
 </head>
 
 <body>
-
-
     <table border="1">
         <thead>
             <tr>
@@ -22,15 +20,13 @@
         <tbody>
             {% for ticker in tickets %}
             <tr>
-                <td>{{ ticker.id }}</td>
-                <td>{{ ticker.name }}</td>
+                <td>{{ ticker.symbol }}</td>
+                <td>{{ ticker.symbol_name }}</td>
                 <td>{{ ticker.created_at }}</td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
-
 </body>
-</script>
 
 </html>
