--- a/templates/tickers.html
+++ b/templates/tickers.html
@@ -13,6 +13,7 @@
     <table border="1">
         <thead>
             <tr>
+                <th>№</th>
                 <th>created_at</th>
                 <th>symbol</th>
                 <th>symbol_name</th>
@@ -35,8 +36,9 @@
             </tr>
         </thead>
         <tbody>
-            {% for ticker in tickers %}
+            {% for (index, ticker) in tickers %}
             <tr>
+                <td>{{ index }}</td>
                 <td>{{ ticker.created_at }}</td>
                 <td>{{ ticker.symbol }}</td>
                 <td>{{ ticker.symbol_name }}</td>
