--- a/templates/ticker.html
+++ b/templates/ticker.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <a href="/tickers"><-Return</a>
     <table border="1">
         <thead>
             <tr>
@@ -65,5 +66,4 @@
         </tbody>
     </table>
 </body>
-
 </html>
