--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="/static/style.css">
   </head>
   <body>
-     <h1>Hola, {{ name }}!</h1>
-    <p>You are {{ time }} years old.</p>
+     <h1>Hola</h1>
+    <p>You are years old.</p>
     <div id="top" class="page" role="document">
       <header role="banner">
         <h1>HTML5 Test Page</h1>
@@ -17,6 +17,7 @@
           This is a test page filled with common HTML elements to be used to
           provide visual feedback whilst building CSS systems and frameworks.
         </p>
+          <p><a href="/tickers">Tickers</a></p>
       </header>
 
       <main role="main">
