--- a/templates/ticker.html
+++ b/templates/ticker.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <p><a href="/tickers"><-Return</a></p>
+    <p><a href="/tickers">Tickers</a></p>
     <table border="1">
         <thead>
             <tr>
