--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
             <header><h1>Links</h1></header>
             <p><a href="/tickers">Tickers</a></p>
             <p><a href="/currencies">Currencies</a></p>
+            <p><a href="/symbols">Symbols</a></p>
             <footer>
               <p></p>
             </footer>
