--- a/templates/tickers.html
+++ b/templates/tickers.html
@@ -65,7 +65,7 @@
             {% endfor %}
         </tbody>
     </table>
-    <footer>{{ elapsed }} s</footer>
+    <footer>{{ elapsed }} ms</footer>
 </body>
 
 </html>
