--- a/templates/ticker.html
+++ b/templates/ticker.html
@@ -65,6 +65,6 @@
             {% endfor %}
         </tbody>
     </table>
-    <footer>{{ elapsed }} ms</footer>
+    <footer>{{ elapsed_ms }} ms</footer>
 </body>
 </html>
