--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.png" type="image/png">
-    <title>WebAggregator</title>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/favicon.png" type="image/png">
+  <title>WebAggregator</title>
   <link rel="stylesheet" href="/static/style.css">
-  </head>
-  <body>
-      <main>
-        <section>
-          <header><h1>Links</h1></header>
-          <article>
-            <header><h1>Links</h1></header>
-            <p><a href="/tickers">Tickers</a></p>
-            <p><a href="/currencies">Currencies</a></p>
-            <p><a href="/symbols">Symbols</a></p>
-            <footer>
-              <p></p>
-            </footer>
-        </section>
-      </main>
-    </div>
-  </body>
+</head>
+
+<body>
+  <main>
+    <section>
+      <article>
+        <header>
+          <h1>Links</h1>
+        </header>
+        <p><a href="/tickers">Tickers</a></p>
+        <p><a href="/currencies">Currencies</a></p>
+        <p><a href="/symbols">Symbols</a></p>
+        <footer>
+          <p></p>
+        </footer>
+    </section>
+  </main>
+  </div>
+</body>
+
 </html>
