--- a/templates/currencies.html
+++ b/templates/currencies.html
@@ -29,15 +29,16 @@
             {% for (index, currency) in currencies %}
             <tr>
                 <td>{{ index }}</td>
-                <td>{{ currency.created_at.format_date() }}</td>     
-                <td>{{ currency.currency }}</td>   
-                <td>{{ currency.name }}</td>     
-                <td>{{ currency.full_name }}</td>     
-                <td>{{ currency.precision }}</td>     
-                <td>{% if let Some(confirms) = currency.confirms %}{{ confirms }}{% endif %}</td>                
-                <td>{% if let Some(contract_address) = currency.contract_address %}{{ contract_address }}{% endif %}</td>                
-                <td>{{ currency.is_margin_enabled }}</td>     
-                <td>{{ currency.is_margin_enabled }}</td>     
+                <td>{{ currency.created_at.format_date() }}</td>
+                <td>{{ currency.currency }}</td>
+                <td>{{ currency.name }}</td>
+                <td>{{ currency.full_name }}</td>
+                <td>{{ currency.precision }}</td>
+                <td>{% if let Some(confirms) = currency.confirms %}{{ confirms }}{% endif %}</td>
+                <td>{% if let Some(contract_address) = currency.contract_address %}{{ contract_address }}{% endif %}
+                </td>
+                <td>{{ currency.is_margin_enabled }}</td>
+                <td>{{ currency.is_margin_enabled }}</td>
             </tr>
             {% endfor %}
         </tbody>
