--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="/favicon.png" type="image/png">
-  <title>WebAggregator</title>
-  <link rel="stylesheet" href="/static/style.css">
-</head>
+{% block title %}WebAggregator{% endblock %}
 
-<body>
-  <main>
-    <section>
-      <article>
-        <header>
-          <h1>Links</h1>
-        </header>
-        <p><a href="/tickers">Tickers</a></p>
-        <p><a href="/currencies">Currencies</a></p>
-        <p><a href="/symbols">Symbols</a></p>
-        <footer>
-          <p></p>
-        </footer>
-    </section>
-  </main>
-  </div>
-</body>
-
-</html>
+{% block content %}
+<main>
+  <section>
+    <article>
+      <header>
+        <h1>Links</h1>
+      </header>
+      <p><a href="/tickers">Tickers</a></p>
+      <p><a href="/currencies">Currencies</a></p>
+      <p><a href="/symbols">Symbols</a></p>
+      <footer>
+        <p></p>
+      </footer>
+  </section>
+</main>
+{% endblock %}
