--- a/templates/ticker.html
+++ b/templates/ticker.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <p><a href="/tickers">Tickers</a></p>
-<table border="1">
+<table border="1" style="overflow-x: auto;">
     <thead>
         <tr>
             <th>№</th>
