--- a/templates/symbols.html
+++ b/templates/symbols.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <table border="1">
+    <table border="1" style="overflow-x: auto;">
         <thead>
             <tr>
                 <th>created_at</th>
