--- a/templates/tickers.html
+++ b/templates/tickers.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <p><a href="/">Home</a></p>
-<table border="1">
+<table border="1" style="overflow-x: auto;">
     <thead>
         <tr>
             <th>№</th>
