--- a/templates/tickers.html
+++ b/templates/tickers.html
@@ -4,6 +4,24 @@
 
 {% block content %}
 <p><a href="/">Home</a></p>
+
+<div id="my-chart" class="ct-chart ct-perfect-fourth"></div>
+
+<script>
+  new Chartist.Line('#my-chart', {
+    labels: ['Пн', 'Вт', 'Ср', 'Чт', 'Пт', 'Сб', 'Вс'],
+    series: [
+      [1, 5, 3, 7, 4, 6, 8],
+      [2, 4, 6, 3, 5, 7, 9]
+    ]
+  }, {
+    fullWidth: true,
+    chartPadding: {
+      right: 40
+    }
+  });
+</script>
+
 <table border="1" style="overflow-x: auto;">
     <thead>
         <tr>
