--- a/templates/tickers.html
+++ b/templates/tickers.html
@@ -15,7 +15,7 @@
       [2, 4, 6, 3, 5, 7, 9]
     ]
   }, {
-    fullWidth: true,
+    fullWidth: false,
     chartPadding: {
       right: 40
     }
