--- a/templates/ticker.html
+++ b/templates/ticker.html
@@ -11,7 +11,9 @@
 <script>
   new Chartist.Line('#my-chart', {
    labels: {{ chart_labels | json | safe }},
-    series: []
+    series: [
+        {{ chart_series | json | safe }}
+    ]
   }, {
     fullWidth: false,
     chartPadding: {
