--- a/templates/ticker.html
+++ b/templates/ticker.html
@@ -6,7 +6,7 @@
 {% block content %}
 <p><a href="/tickers">Tickers</a></p>
 
-<div id="my-chart"></div>
+<div id="my-chart" style="background-color: aquamarine;"></div>
 
 <script>
   new Chartist.Line('#my-chart', {
