--- a/templates/symbol.html
+++ b/templates/symbol.html
@@ -3,7 +3,7 @@
 {% block title %}Symbols{% endblock %}
 
 {% block content %}
-<p><a href="/">Home</a></p>
+<p><a href="/symbols">Symbols</a></p>
 <table border="1" style="overflow-x: auto;">
         <thead>
             <tr>
