--- a/templates/symbols.html
+++ b/templates/symbols.html
@@ -5,17 +5,79 @@
 {% block content %}
 <p><a href="/">Home</a></p>
 <table border="1" style="overflow-x: auto;">
-        <thead>
-            <tr>
-                <th>created_at</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for symbol in symbols %}
-            <tr>
-                <td>{{ symbol.created_at }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <thead>
+        <tr>
+            <th>created_at</th>
+            <th>symbol</th>
+            <th>name</th>
+            <th>base_currency</th>
+            <th>quote_currency</th>
+            <th>fee_currency</th>
+            <th>market</th>
+            <th>base_min_size</th>
+            <th>quote_min_size</th>
+            <th>base_max_size</th>
+            <th>quote_max_size</th>
+            <th>base_increment</th>
+            <th>quote_increment</th>
+            <th>price_increment</th>
+            <th>price_limit_rate</th>
+            <th>min_funds</th>
+            <th>is_margin_enabled</th>
+            <th>enable_trading</th>
+            <th>fee_category</th>
+            <th>maker_fee_coefficient</th>
+            <th>taker_fee_coefficient</th>
+            <th>st</th>
+            <th>callauction_is_enabled</th>
+            <th>callauction_price_floor</th>
+            <th>callauction_price_ceiling</th>
+            <th>callauction_first_stage_start_time</th>
+            <th>callauction_second_stage_start_time</th>
+            <th>callauction_third_stage_start_time</th>
+            <th>trading_start_time</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for symbol in symbols %}
+        <tr>
+            <td>{{ symbol.created_at }}</td>
+            <td>{{ symbol.symbol }}</td>
+            <td>{{ symbol.name }}</td>
+            <td>{{ symbol.base_currency }}</td>
+            <td>{{ symbol.quote_currency }}</td>
+            <td>{{ symbol.fee_currency }}</td>
+            <td>{{ symbol.market }}</td>
+            <td>{{ symbol.base_min_size }}</td>
+            <td>{{ symbol.quote_min_size }}</td>
+            <td>{{ symbol.base_max_size }}</td>
+            <td>{{ symbol.quote_max_size }}</td>
+            <td>{{ symbol.base_increment }}</td>
+            <td>{{ symbol.quote_increment }}</td>
+            <td>{{ symbol.price_increment }}</td>
+            <td>{{ symbol.price_limit_rate }}</td>
+            <td>{% if let Some(min_funds) = symbol.min_funds %}{{ min_funds }}{% endif %}</td>
+            <td>{{ symbol.is_margin_enabled }}</td>
+            <td>{{ symbol.enable_trading }}</td>
+            <td>{{ symbol.fee_category }}</td>
+            <td>{{ symbol.maker_fee_coefficient }}</td>
+            <td>{{ symbol.taker_fee_coefficient }}</td>
+            <td>{{ symbol.st }}</td>
+            <td>{{ symbol.callauction_is_enabled }}</td>
+            <td>{% if let Some(callauction_price_floor) = symbol.callauction_price_floor %}{{ callauction_price_floor
+                }}{% endif %}</td>
+            <td>{% if let Some(callauction_price_ceiling) = symbol.callauction_price_ceiling %}{{
+                callauction_price_ceiling }}{% endif %}</td>
+            <td>{% if let Some(callauction_first_stage_start_time) = symbol.callauction_first_stage_start_time %}{{
+                callauction_first_stage_start_time }}{% endif %}</td>
+            <td>{% if let Some(callauction_second_stage_start_time) = symbol.callauction_second_stage_start_time %}{{
+                callauction_second_stage_start_time }}{% endif %}</td>
+            <td>{% if let Some(callauction_third_stage_start_time) = symbol.callauction_third_stage_start_time %}{{
+                callauction_third_stage_start_time }}{% endif %}</td>
+            <td>{% if let Some(trading_start_time) = symbol.trading_start_time %}{{ trading_start_time }}{% endif %}
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
