--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>{% block title %}{{ title }}{% endblock %}</title>
+    <title>
+        {% block title %}
+        {{ title }}
+        {% endblock %}
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.png" type="image/png">
     <link rel="stylesheet" href="/static/style.css">
@@ -10,6 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chartist@0.11.4/dist/chartist.min.js"></script>
 </head>
 
-<body>{% block content %}{% endblock %}</body>
+<body>
+    {% block content %}{% endblock %}
+</body>
 
 </html>
