--- a/templates/symbols.html
+++ b/templates/symbols.html
@@ -56,7 +56,11 @@
             <td>{{ symbol.quote_increment }}</td>
             <td>{{ symbol.price_increment }}</td>
             <td>{{ symbol.price_limit_rate }}</td>
-            <td>{% if let Some(min_funds) = symbol.min_funds %}{{ min_funds }}{% endif %}</td>
+            <td>
+                {% if let Some(min_funds) = symbol.min_funds %}
+                {{ min_funds }}
+                {% endif %}
+            </td>
             <td>{{ symbol.is_margin_enabled }}</td>
             <td>{{ symbol.enable_trading }}</td>
             <td>{{ symbol.fee_category }}</td>
@@ -64,17 +68,35 @@
             <td>{{ symbol.taker_fee_coefficient }}</td>
             <td>{{ symbol.st }}</td>
             <td>{{ symbol.callauction_is_enabled }}</td>
-            <td>{% if let Some(callauction_price_floor) = symbol.callauction_price_floor %}{{ callauction_price_floor
-                }}{% endif %}</td>
-            <td>{% if let Some(callauction_price_ceiling) = symbol.callauction_price_ceiling %}{{
-                callauction_price_ceiling }}{% endif %}</td>
-            <td>{% if let Some(callauction_first_stage_start_time) = symbol.callauction_first_stage_start_time %}{{
-                callauction_first_stage_start_time }}{% endif %}</td>
-            <td>{% if let Some(callauction_second_stage_start_time) = symbol.callauction_second_stage_start_time %}{{
-                callauction_second_stage_start_time }}{% endif %}</td>
-            <td>{% if let Some(callauction_third_stage_start_time) = symbol.callauction_third_stage_start_time %}{{
-                callauction_third_stage_start_time }}{% endif %}</td>
-            <td>{% if let Some(trading_start_time) = symbol.trading_start_time %}{{ trading_start_time }}{% endif %}
+            <td>
+                {% if let Some(callauction_price_floor) = symbol.callauction_price_floor %}
+                {{ callauction_price_floor }}
+                {% endif %}
+            </td>
+            <td>
+                {% if let Some(callauction_price_ceiling) = symbol.callauction_price_ceiling %}
+                {{ callauction_price_ceiling }}
+                {% endif %}
+            </td>
+            <td>
+                {% if let Some(callauction_first_stage_start_time) = symbol.callauction_first_stage_start_time %}
+                {{ callauction_first_stage_start_time }}
+                {% endif %}
+            </td>
+            <td>
+                {% if let Some(callauction_second_stage_start_time) = symbol.callauction_second_stage_start_time %}
+                {{ callauction_second_stage_start_time }}
+                {% endif %}
+            </td>
+            <td>
+                {% if let Some(callauction_third_stage_start_time) = symbol.callauction_third_stage_start_time %}
+                {{ callauction_third_stage_start_time }}
+                {% endif %}
+            </td>
+            <td>
+                {% if let Some(trading_start_time) = symbol.trading_start_time %}
+                {{ trading_start_time }}
+                {% endif %}
             </td>
         </tr>
         {% endfor %}
