--- a/templates/tickers.html
+++ b/templates/tickers.html
@@ -36,23 +36,73 @@
             <td>{{ ticker.created_at.format_date() }}</td>
             <td>{{ ticker.symbol }}</td>
             <td><a href="/ticker/{{ ticker.symbol_name }}">{{ ticker.symbol_name }}</a></td>
-            <td>{% if let Some(buy) = ticker.buy %}{{ buy }}{% endif %}</td>
-            <td>{% if let Some(sell) = ticker.sell %}{{ sell }}{% endif %}</td>
-            <td>{% if let Some(best_bid_size) = ticker.best_bid_size %}{{ best_bid_size }}{% endif %}</td>
-            <td>{% if let Some(best_ask_size) = ticker.best_ask_size %}{{ best_ask_size }}{% endif %}</td>
-            <td>{% if let Some(change_rate) = ticker.change_rate %}{{ change_rate }}{% endif %}</td>
-            <td>{% if let Some(change_price) = ticker.change_price %}{{ change_price }}{% endif %}</td>
-            <td>{% if let Some(high) = ticker.high %}{{ high }}{% endif %}</td>
-            <td>{% if let Some(low) = ticker.low %}{{ low }}{% endif %}</td>
-            <td>{% if let Some(vol) = ticker.vol %}{{ vol }}{% endif %}</td>
-            <td>{% if let Some(vol_value) = ticker.vol_value %}{{ vol_value }}{% endif %}</td>
-            <td>{% if let Some(last) = ticker.last %}{{ last }}{% endif %}</td>
-            <td>{% if let Some(average_price) = ticker.average_price %}{{ average_price }}{% endif %}</td>
-            <td>{% if let Some(taker_fee_rate) = ticker.taker_fee_rate %}{{ taker_fee_rate }}{% endif %}</td>
-            <td>{% if let Some(maker_fee_rate) = ticker.maker_fee_rate %}{{ maker_fee_rate }}{% endif %}</td>
-            <td>{% if let Some(taker_coefficient) = ticker.taker_coefficient %}{{ taker_coefficient }}{% endif %}
+            <td>
+                {% if let Some(buy) = ticker.buy %}
+                {{ buy }}
+                {% endif %}
             </td>
-            <td>{% if let Some(maker_coefficient) = ticker.maker_coefficient %}{{ maker_coefficient }}{% endif %}
+            <td>
+                {% if let Some(sell) = ticker.sell %}
+                {{ sell }}
+                {% endif %}
+            </td>
+            <td>
+                {% if let Some(best_bid_size) = ticker.best_bid_size %}
+                {{ best_bid_size }}
+                {% endif %}</td>
+            <td>
+                {% if let Some(best_ask_size) = ticker.best_ask_size %}
+                {{ best_ask_size }}
+                {% endif %}</td>
+            <td>
+                {% if let Some(change_rate) = ticker.change_rate %}
+                {{ change_rate }}
+                {% endif %}</td>
+            <td>
+                {% if let Some(change_price) = ticker.change_price %}
+                {{ change_price }}
+                {% endif %}</td>
+            <td>
+                {% if let Some(high) = ticker.high %}
+                {{ high }}
+                {% endif %}</td>
+            <td>
+                {% if let Some(low) = ticker.low %}
+                {{ low }}
+                {% endif %}</td>
+            <td>
+                {% if let Some(vol) = ticker.vol %}
+                {{ vol }}
+                {% endif %}</td>
+            <td>
+                {% if let Some(vol_value) = ticker.vol_value %}
+                {{ vol_value }}
+                {% endif %}</td>
+            <td>
+                {% if let Some(last) = ticker.last %}
+                {{ last }}
+                {% endif %}</td>
+            <td>
+                {% if let Some(average_price) = ticker.average_price %}
+                {{ average_price }}
+                {% endif %}</td>
+            <td>
+                {% if let Some(taker_fee_rate) = ticker.taker_fee_rate %}
+                {{ taker_fee_rate }}
+                {% endif %}</td>
+            <td>
+                {% if let Some(maker_fee_rate) = ticker.maker_fee_rate %}
+                {{ maker_fee_rate }}
+                {% endif %}</td>
+            <td>
+                {% if let Some(taker_coefficient) = ticker.taker_coefficient %}
+                {{ taker_coefficient }}
+                {% endif %}
+            </td>
+            <td>
+                {% if let Some(maker_coefficient) = ticker.maker_coefficient %}
+                {{ maker_coefficient }}
+                {% endif %}
             </td>
         </tr>
         {% endfor %}
