--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
       <p><a href="/tickers">Tickers</a></p>
       <p><a href="/currencies">Currencies</a></p>
       <p><a href="/symbols">Symbols</a></p>
-      <p><a href="/lend">Symbols</a></p>
-      <p><a href="/borrow">Symbols</a></p>
+      <p><a href="/lend">Lend</a></p>
+      <p><a href="/borrow">Borrow</a></p>
   </section>
 </main>
 {% endblock %}
