--- a/templates/symbol.html
+++ b/templates/symbol.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <p><a href="/symbols">Symbols</a></p>
-<table border="1" style="overflow-x: auto;">
+<table border="1">
         <thead>
             <tr>
                 <th>created_at</th>
