--- a/templates/currency.html
+++ b/templates/currency.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <p><a href="/currencies">Currency</a></p>
-<table border="1" style="overflow-x: auto;">
+<table border="1">
     <thead>
         <tr>
             <th>№</th>
