--- a/templates/symbols.html
+++ b/templates/symbols.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <p><a href="/">Home</a></p>
-<table border="1" style="overflow-x: auto;">
+<table border="1">
     <thead>
         <tr>
             <th>created_at</th>
