--- a/templates/borrow.html
+++ b/templates/borrow.html
@@ -18,7 +18,7 @@
         {% for (index, borrow) in borrows %}
         <tr>
             <td>{{ index }}</td>
-            <td>{{ borrow.created_at }}</td>
+            <td>{{ borrow.created_at.format_date() }}</td>
             <td>{{ borrow.currency }}</td>
             <td>{{ borrow.hourly_borrow_rate }}</td>
             <td>{{ borrow.annualized_borrow_rate }}</td>
