--- a/templates/symbols.html
+++ b/templates/symbols.html
@@ -41,7 +41,7 @@
     <tbody>
         {% for symbol in symbols %}
         <tr>
-            <td>{{ symbol.created_at }}</td>
+            <td>{{ symbol.created_at.format_date() }}</td>
             <td>{{ symbol.symbol }}</td>
             <td>{{ symbol.name }}</td>
             <td>{{ symbol.base_currency }}</td>
