--- a/templates/symbol.html
+++ b/templates/symbol.html
@@ -13,7 +13,7 @@
     <tbody>
         {% for symbol in symbols %}
         <tr>
-            <td>{{ symbol.created_at }}</td>
+            <td>{{ symbol.created_at.format_date() }}</td>
         </tr>
         {% endfor %}
     </tbody>
