--- a/templates/lend.html
+++ b/templates/lend.html
@@ -3,7 +3,7 @@
 {% block title %}Lend{% endblock %}
 
 {% block content %}
-<p><a href="/">Lend</a></p>
+<p><a href="/">Home</a></p>
 <table border="1">
     <thead>
         <tr>
