--- a/templates/borrows.html
+++ b/templates/borrows.html
@@ -3,7 +3,7 @@
 {% block title %}Borrow{% endblock %}
 
 {% block content %}
-<p><a href="/borrow">Borrow</a></p>
+<p><a href="/">Home</a></p>
 <table border="1">
     <thead>
         <tr>
@@ -19,7 +19,7 @@
         <tr>
             <td>{{ index }}</td>
             <td>{{ borrow.created_at.format_date() }}</td>
-            <td>{{ borrow.currency }}</td>
+            <td><a href="/borrow/{{ borrow.currency }}">{{ borrow.currency }}</a></td>
             <td>{{ borrow.hourly_borrow_rate }}</td>
             <td>{{ borrow.annualized_borrow_rate }}</td>
         </tr>
