--- a/static/style.css
+++ b/static/style.css
@@ -286,7 +286,7 @@ fieldset {
 
 .pin_time {
   position: fixed;
-  bottom: 10px;
+  top: 10px;
   right: 10px;
   background: rgba(0, 0, 0, 0.7);
   color: white;
