--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -14,7 +14,7 @@
       <p><a href="/symbols">Symbols</a></p>
       <p><a href="/lend">Lend</a></p>
       <p><a href="/borrow">Borrow</a></p>
-      <p><a href="/similardva">Similar DVA</a></p>
+      <p><a href="/dva">DVA</a></p>
   </section>
 </main>
 {% endblock %}
