--- a/templates/dva/dva.html
+++ b/templates/dva/dva.html
@@ -6,16 +6,16 @@
 <p><a href="/dva">Dva</a></p>
 
 <p>=== Результаты Dollar Value Averaging (DVA) ===</p>
-<p>Периодов: </p>
-<p>Целевой прирост за период: ${:.2}</p>
-<p>Комиссия: {:.2}%</p>
-<p>Общая сумма покупок: ${:.2} {{ data.total_gross_spent }}</p>
-<p>Общая сумма продаж: ${:.2} {{ data.total_gross_received }}</p>
-<p>Чисто инвестировано (нетто): ${:.2} {{ data.net_invested }}</p>
-<p>Конечное количество актива: {:.4} {{ data.final_asset_amount }}</p>
-<p>Конечная цена: ${:.4} {{ data.final_price }}</p>
-<p>Конечная стоимость: ${:.2} {{ data.final_value }}</p>
-<p>Чистая прибыль/убыток: ${:.2} {{ data.profit }}</p>
-<p>Доходность (ROI): {:+.2}% {{ data.roi }} * 100.0</p>
+<p>Периодов:</p>
+<p>Целевой прирост за период:</p>
+<p>Комиссия:</p>
+<p>Общая сумма покупок:{{ data.total_gross_spent }}</p>
+<p>Общая сумма продаж:{{ data.total_gross_received }}</p>
+<p>Чисто инвестировано (нетто):{{ data.net_invested }}</p>
+<p>Конечное количество актива:{{ data.final_asset_amount }}</p>
+<p>Конечная цена:{{ data.final_price }}</p>
+<p>Конечная стоимость:{{ data.final_value }}</p>
+<p>Чистая прибыль/убыток:{{ data.profit }}</p>
+<p>Доходность (ROI):{{ data.roi }}</p>
 <div class="pin_time">{{ elapsed_ms }} ms</div>
 {% endblock %}
