--- a/templates/dva/dva.html
+++ b/templates/dva/dva.html
@@ -3,7 +3,7 @@
 {% block title %}Tickers{% endblock %}
 
 {% block content %}
-<p><a href="/dva">Dva</a></p>
+<p><a href="/dva">DVA</a></p>
 <p>=== Результаты Dollar Value Averaging (DVA) ===</p>
 <table>
     <thead>
@@ -35,7 +35,6 @@
             <td>{{ data.profit }}</td>
             <td>{{ data.roi }}</td>
         </tr>
-
     </tbody>
 </table>
 <div class="pin_time">{{ elapsed_ms }} ms</div>
