--- a/templates/dva/dva.html
+++ b/templates/dva/dva.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Tickers{% endblock %}
+{% block title %}DVA{% endblock %}
 
 {% block content %}
 <p><a href="/dva">DVA</a></p>
