--- a/templates/dva/dva.html
+++ b/templates/dva/dva.html
@@ -6,33 +6,50 @@
 <p><a href="/dva">DVA</a></p>
 <p>=== Результаты Dollar Value Averaging (DVA) ===</p>
 <table>
-    <thead>
-        <tr>
-            <th>Периодов</th>
-            <th>Целевой прирост за период</th>
-            <th>Комиссия</th>
-            <th>Общая сумма покупок</th>
-            <th>Общая сумма продаж</th>
-            <th>Чисто инвестировано (нетто)</th>
-            <th>Конечное количество актива</th>
-            <th>Конечная цена</th>
-            <th>Конечная стоимость</th>
-            <th>Чистая прибыль/убыток</th>
-            <th>Доходность (ROI)</th>
-        </tr>
-    </thead>
     <tbody>
         <tr>
+            <td>Периодов</td>
             <td>{{ data.periods }}</td>
-            <td></td>
+        </tr>
+        <tr>
+            <td>Целевой прирост за период</td>
+            <td>{{ data.target_increment }}</td>
+        </tr>
+        <tr>
+            <td>Комиссия</td>
             <td>{{ data.commission_rate }}</td>
+        </tr>
+        <tr>
+            <td>Общая сумма покупок</td>
             <td>{{ data.total_gross_spent }}</td>
+        </tr>
+        <tr>
+            <td>Общая сумма продаж</td>
             <td>{{ data.total_gross_received }}</td>
+        </tr>
+        <tr>
+            <td>Чисто инвестировано (нетто)</td>
             <td>{{ data.net_invested }}</td>
+        </tr>
+        <tr>
+            <td>Конечное количество актива</td>
             <td>{{ data.final_asset_amount }}</td>
+        </tr>
+        <tr>
+            <td>Конечная цена</td>
             <td>{{ data.final_price }}</td>
+
+        </tr>
+        <tr>
+            <td>Конечная стоимость</td>
             <td>{{ data.final_value }}</td>
+        </tr>
+        <tr>
+            <td>Чистая прибыль/убыток</td>
             <td>{{ data.profit }}</td>
+        </tr>
+        <tr>
+            <td>Доходность (ROI)</td>
             <td>{{ data.roi }}</td>
         </tr>
     </tbody>
