--- a/templates/dva/dva.html
+++ b/templates/dva/dva.html
@@ -36,10 +36,18 @@
             <td>{{ data.final_asset_amount }}</td>
         </tr>
         <tr>
+            <td>Начальная цена</td>
+            <td>{{ data.start_price }}</td>
+        </tr>
+        <tr>
             <td>Конечная цена</td>
             <td>{{ data.final_price }}</td>
-
         </tr>
+        <tr>
+            <td>% Роста</td>
+            <td>{{ data.bnh }}</td>
+        </tr>
+
         <tr>
             <td>Конечная стоимость</td>
             <td>{{ data.final_value }}</td>
