--- a/templates/dva/dva.html
+++ b/templates/dva/dva.html
@@ -5,6 +5,7 @@
 {% block content %}
 <p><a href="/dva">DVA</a></p>
 <p>=== Результаты Dollar Value Averaging (DVA) ===</p>
+<p>{{ ticker }}</p>
 <table>
     <tbody>
         <tr>
