--- a/templates/candle/candle.html
+++ b/templates/candle/candle.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Lend{% endblock %}
+{% block title %}Candle{% endblock %}
 
 {% block content %}
 <p><a href="/candle">Candles</a></p>
