--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -15,6 +15,7 @@
       <p><a href="/lend">Lend</a></p>
       <p><a href="/borrow">Borrow</a></p>
       <p><a href="/dva">DVA</a></p>
+      <p><a href="/candle">Candle</a></p>
   </section>
 </main>
 {% endblock %}
