--- a/templates/tickers.html
+++ b/templates/tickers.html
@@ -8,6 +8,7 @@
     <thead>
         <tr>
             <th>№</th>
+            <th>exchange</th>
             <th>symbol</th>
             <th>symbol_name</th>
             <th>taker_fee_rate</th>
@@ -20,6 +21,7 @@
         {% for (index, ticker) in tickers %}
         <tr>
             <td>{{ index }}</td>
+            <td>{{ ticker.exchange }}</td>
             <td>{{ ticker.symbol }}</td>
             <td>{{ ticker.symbol_name }}</td>
             <td>
